# lenskit-implicit

./: README.md  pyproject.toml
.github/workflows/: test-suite.yml
docs/: conf.py  index.rst
lenskit_implicit/: implicit.py
tests/: conftest.py  test_implicit.py
