[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lenskit-implicit"
author = "Michael Ekstrand"
author-email = "michaelekstrand@boisestate.edu"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
]
requires-python = ">= 3.7"
description-file = "README.md"
license = "MIT"
requires = [
    "lenskit[doc] @ git+https://github.com/lenskit/lkpy.git#main",
    "implicit"
]

[project.urls]
homepage = "https://lkpy.lenskit.org/projects/implicit"
GitHub = "https://github.com/lenskit/lenskit-hpf"

[tool.flit.metadata.requires-extra]
test = [
    "pytest >= 6",
    "pytest-doctestplus >= 0.9",
]
dev = [
    "flit >= 3",
    "conda-lock",
    "invoke",
    "flake8 >= 3",
    "coverage >= 5",
    "pytest-cov >= 2.12",
]

[tool.flit.module]
name = "lenskit_implicit"

[tool.flit.sdist]
exclude = [
    ".github",
    "*.ipynb",
    "docs",
    "data",
    "examples",
    "lkbuild",
    "tests",
]

[tool.conda-lock]
channels = [
    "conda-forge"
]
